<resources>
    <string name="app_name">APPScream</string>
    <string name="bemvindos">Bem-Vindo a Woodsboro</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confsenha">Confirme a senha</string>
    <string name="scream">SCREAM</string>
    <string name="cadastro">Não entre em PÂNICO. Se cadastre agora.</string>
    <string name="login">Não entre em PÂNICO. Logue agora.</string>
    <string name="nome">Nome</string>
    <string name="personagem">Escolha seu personagem</string>
    <string name="sidney">Sidney</string>
    <string name="salvar_pers">SALVAR PERSONAGEM</string>
    <string name="franquia">Franquia</string>
    <string name="benvindo">Bem-Vindo,</string>
    <string name="yas">Yasmim</string>
    <string name="seuperso">Seu personagem é</string>
    <string name="tara">Tara</string>
    <string name="dados">Seus Dados</string>
    <string name="editdados">Editar Dados</string>
    <string name="deslog">Deslogar</string>
    <string name="ligacao">Receba uma ligação do Ghostface</string>
    <string name="ligar">Ligar</string>
    <string name="pesquisa">Utilize a API para pesquisar\n outros filmes</string>
    <string name="digite">Digite o nome</string>
    <string name="busque">BUSCAR</string>
    <string name="conheca">Conheça os personagens</string>
    <string name="conhecaelenco">Conheça o elenco</string>
    <string name="atores">Atores da franquia</string>
    <string name="personagens">Personagens da franquia</string>
</resources>