<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".CadastroActivity">

    <ImageView
        android:id="@+id/imgcadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:src="@drawable/iconcadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbemvindocad" />

    <TextView
        android:id="@+id/txtbemvindocad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/scream"
        android:text="@string/bemvindos"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editemailcad"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/segoui"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColor="#92FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/sombraemailcad"
        app:layout_constraintEnd_toEndOf="@+id/sombraemailcad"
        app:layout_constraintStart_toStartOf="@+id/sombraemailcad"
        app:layout_constraintTop_toTopOf="@+id/sombraemailcad"
        tools:text="@string/email" />

    <ImageView
        android:id="@+id/sombraemailcad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/shadow_12621"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editnome" />

    <EditText
        android:id="@+id/editnome"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/iconpessoa"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/segoui"
        android:inputType="text|textPersonName"
        android:paddingStart="15dp"
        android:text="@string/nome"
        android:textColor="#92FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/sombranomecad"
        app:layout_constraintEnd_toEndOf="@+id/sombranomecad"
        app:layout_constraintStart_toStartOf="@+id/sombranomecad"
        app:layout_constraintTop_toTopOf="@+id/sombranomecad" />

    <ImageView
        android:id="@+id/sombranomecad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/shadow_12621"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgcadastro" />

    <EditText
        android:id="@+id/editsenhacad"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:paddingStart="12dp"
        android:textColor="#92FFFFFF"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/sombrasenhacad"
        app:layout_constraintEnd_toEndOf="@+id/sombrasenhacad"
        app:layout_constraintStart_toStartOf="@+id/sombrasenhacad"
        app:layout_constraintTop_toTopOf="@+id/sombrasenhacad" />

    <ImageView
        android:id="@+id/sombrasenhacad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/shadow_12621"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editemailcad" />

    <Button
        android:id="@+id/btnscreamcad"
        android:layout_width="214dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#7C3737"
        android:fontFamily="@font/sen"
        android:text="@string/scream"
        android:textSize="20dp"
        app:icon="@drawable/panicologin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sombrasenhacad" />

    <Button
        android:id="@+id/btncadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/segoeuibold"
        android:text="@string/cadastro"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>